[package]
name = "ppo-rs"
version = "0.1.0"
authors = ["immortal infidel <immortal.infidel@gmail.com>"]
edition = "2018"
license="MIT"
description="Percentage Price Oscillator (PPO) Implementation In Rust"
repository="https://github.com/immortalinfidel/ppo-rs"
homepage="https://github.com/immortalinfidel/ppo-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ta-common = "0.1.0"
ema-rs = "0.1.0"
